# reconstructionEvaluator

./: CMakeLists.txt
cmake/modules/: FindASSIMP.cmake
config/: dtu15.config  fountain.config  kitti.config  kitti05.config  kitti2.config  kitti3.config
include/reconstructionEvaluator/: Configuration.h  DepthFromPCL.h  DepthFromVelodyne.h  DepthMapFromMesh.h  DepthMapFromMeshGPU.h  DepthMapProgram.h  DepthMapXYZProgram.h  GtComparator.h  OpenGLProgram.h  Polyhedron_AssimpToCgal.h  ShaderManager.h  ShaderProgram.h  TextureManager.h  types.hpp  utilities.hpp
include/reconstructionEvaluator/camParser/: CameraParser.h  DTUParser.h  EpflParser.h  KittiOdoPoseGtParser.h  OpenMvgParser.h  ParserInterface.hpp
shaders/: depthXYZ_fragment_shader.glsl  depthXYZ_geometry_shader.glsl  depthXYZ_vertex_shader.glsl
src/: Configuration.cpp  DepthFromPCL.cpp  DepthFromVelodyne.cpp  DepthMapFromMesh.cpp  DepthMapFromMeshGPU.cpp  DepthMapProgram.cpp  DepthMapXYZProgram.cpp  GtComparator.cpp  OpenGLProgram.cpp  Polyhedron_AssimpToCgal.h  ShaderManager.cpp  ShaderProgram.cpp  TextureManager.cpp  utilities.cpp
src/camParser/: CameraParser.cpp  DTUParser.cpp  EpflParser.cpp  KittiOdoPoseGtParser.cpp  OpenMvgParser.cpp
test/: Main.cpp
